4/22/2022 - 12:51 PM - 2:23 PM - Updated ModifiedButton to LineSelectButton.  Added Get and Set values for RowSpread ColumnSpread.  Added MouseEnter/MouseLeave event handler to CompanySearchPage. 1 hour 30 min
4/22/2022 - 3:41 PM - 6:05 PM - working with colors and buttons get normal functionality to all buttons in lineselect for search results in companysearch. Colors are now working for highlighting buttons, now i just have to have it highlight all the buttons on the row.  lightblue highlight is 255 190 230 253.  I was able to fix it for one button but have to fix it for all of them in the search.  Form crashes when search is pressed a 2nd time.

--- a/ClientMCR/ContactSearchPage.xaml
+++ b/ClientMCR/ContactSearchPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ContactSearchPage" >
     <!--Background="#FF5B689D"-->
-    
+
 
     <Grid>
         <Grid.RowDefinitions>
@@ -88,7 +88,7 @@
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="3" >
-                                <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
+                                <Button x:Name="defautButton" Content="empty" IsEnabled="True" Visibility ="Hidden"/>
                             </StackPanel>
                             <!--This line is commented out because it belongs on another form/page - Search by customer info should be seperate from company search info-->
                             <!--<TextBlock Text="Search by Customer" FontSize="20" Grid.Column="1" Grid.Row="4" Background="#C8D1F4" />-->
@@ -141,9 +141,9 @@
                                     </Grid.ColumnDefinitions>
                                     <Button Content="empty" Grid.Column="5" Grid.Row="0" IsEnabled="False" Visibility ="Hidden"/>
                                     <Button Content="Search" Grid.Column="5" Grid.Row="2" Click="ContactSearch" Grid.ColumnSpan="2" Margin="0,0,41,0" />
-                                    <Button Content="Clear Form" Grid.Column="2" Grid.Row="1" Click="ClearContactSearch" Grid.ColumnSpan="3" Height="20" Margin="41,0,41,0" Grid.RowSpan="2" VerticalAlignment="Top" />
+                                    <Button Content="Clear Form" Grid.Column="2" Grid.Row="1" Click="ClearContactSearch" Grid.ColumnSpan="3" Height="20" Margin="41,0,41,0" Grid.RowSpan="2" VerticalAlignment="Top"  />
                                     <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
-                                    
+
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" >
@@ -163,7 +163,7 @@
                                     <!--This line is commented out because it belongs on another form/page - Search by customer info should be seperate from company search info-->
                                     <!--<Button Content="Add Company" Grid.Column="1" Grid.Row="0" Click="AddCompanyEntityButton"  />-->
                                     <!--<Button Content="Add Customer" Grid.Column="3" Grid.Row="0"/>-->
-                                    <Button Content="Search Company" Grid.Column="3" Grid.Row="2" Click="CompanySearch" />
+                                    <Button Content="Search Company" Grid.Column="3" Grid.Row="2" Click="CompanySearch" Background="#FFDDDDDD" />
                                     <Button Content="empty" Grid.Column="3" Grid.Row="1" IsEnabled="False" Visibility ="Hidden"/>
                                 </Grid>
                             </StackPanel>
