4/27/2022 - 2:00 PM - 2:30 PM - tried one last time to get a lambda to work with it, finally moving on.
4/27/2022 - 2:52 PM - 3:50 PM - Worked on creating a trimmer to remove numbers and spaces and commas from a file called AllCountries.

4/27/2022 - 4:05 PM - 4:37 PM - couldn't get it to work right so i just did it by hand.  I got my list of countries.

4/27/2022 - 5:49 PM - 7:52 PM - got a list of all the countries i think, and coded them in listOfCountries.CS.  Created my first country templete for Afghanistan, can't get it to load right now.

--- a/ClientMCR/AddCompanyEntityPage.xaml
+++ b/ClientMCR/AddCompanyEntityPage.xaml
@@ -22,6 +22,7 @@
                 <RowDefinition Height="6*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
             <TextBlock Text="Company to Add / Update" FontSize="20" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
@@ -91,33 +92,19 @@
 
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.Row="3">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="2*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                    </Grid.RowDefinitions>
-                    <TextBlock Text="Address Line 1   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
-                    <TextBox x:Name="AddressLine1Box" Text="" Grid.Column="1" Grid.Row="0" />
-                    <TextBlock Text="Address Line 2   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
-                    <TextBox x:Name="AddressLine2Box" Text="" Grid.Column="1" Grid.Row="2" />
-                    <TextBlock Text="City" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                    <TextBox x:Name="AddressCity" Text="" Grid.Column="1" Grid.Row="3"/>
-                    <TextBlock Text="State" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
-                    <TextBox x:Name="AddressState" Text="" Grid.Column="1" Grid.Row="5"/>
-                    <TextBlock Text="Zip Code" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
-                    <TextBox x:Name="AddressZipCode" Text="" Grid.Column="1" Grid.Row="6"/>
-                </Grid>
+                <Frame x:Name="MainCountryAddress"/>
+                
             </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" >
+            <StackPanel Grid.Column="0" Grid.Row="4">
+                <ComboBox x:Name="lb" Grid.Row="1" Grid.Column="0"  SelectionChanged="CountryDropDownSelection" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding countryName}" ></TextBlock>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
+            <StackPanel Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" >
                 <!--Clear Form and Search Button -->
                 <Grid>
                     <Grid.RowDefinitions>
@@ -140,7 +127,7 @@
                     <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
                 </Grid>
             </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" >
+            <StackPanel Grid.Column="0" Grid.Row="6" VerticalAlignment="Center" >
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
