4/28/2022 - 2:36 PM - 4:22 PM - Updated ListofCountries to include austriala, canada and the usa.  Will have to work on afghanistan another day.  started working on Australia and then found out i need to update the CompanyEntityObject to account for the new CountryPostalObjects that it will hook into.
4/28/2022 - 5:24 PM - 5:57 PM - Creating new class CountryPostalEntity.

4/28/2022 - 6:10 PM - 7:49 PM - Created CountryCompanyAddress.xaml / cs so it would dynamically create textblock and textbox objects based on the country that was passed inside the CountryPostalEntity.cs that i just created.

--- a/ClientMCR/AddCompanyEntityPage.xaml
+++ b/ClientMCR/AddCompanyEntityPage.xaml
@@ -20,6 +20,7 @@
                 <RowDefinition Height="6*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="6*"/>
+                <RowDefinition Height="6*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
@@ -88,14 +89,29 @@
                 </Border>
             </StackPanel>
             <TextBlock Text="Company Address" FontSize="12" Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
-            <StackPanel Grid.Column="0" Grid.Row="2">
-
-            </StackPanel>
             <StackPanel Grid.Column="0" Grid.Row="3">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    
+                    <Button Grid.Column="0" Grid.Row="4" Visibility="Hidden" />
+                </Grid>
+            </StackPanel>
+            
+            <StackPanel Grid.Column="0" Grid.Row="4">
                 <Frame x:Name="MainCountryAddress"/>
                 
             </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="4">
+            <StackPanel Grid.Column="0" Grid.Row="5">
                 <ComboBox x:Name="lb" Grid.Row="1" Grid.Column="0"  SelectionChanged="CountryDropDownSelection" >
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
@@ -104,7 +120,7 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
             </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" >
+            <StackPanel Grid.Column="0" Grid.Row="9" VerticalAlignment="Center" >
                 <!--Clear Form and Search Button -->
                 <Grid>
                     <Grid.RowDefinitions>
@@ -127,7 +143,7 @@
                     <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
                 </Grid>
             </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="6" VerticalAlignment="Center" >
+            <StackPanel Grid.Column="0" Grid.Row="10" VerticalAlignment="Center" >
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
