5/2/2022 - 11:42 AM - 1:44 PM - I was not retreieving the country assigned to the object properly and was using an arbitrary method used for a different reason.  Next the textblocks and textboxs were not being added correctly, some of the control properties were miss-named.  Deleted un-used country xaml/cs files.  I need atleast 3 color skins for menus. If i do it now i save some time i think.
5/2/2022 - 2:42 PM - 4:08 PM - trying to create a bitmap to load for colorpicker. Created code to process a random bitmap in WPF-ColorBitMap

5/2/2022 - 4:35 PM - 5:05 PM - I was able to create a 32-bit bgr bitmap in WPF-ColorBitMap.

--- a/ClientMCR/MainWindow.xaml
+++ b/ClientMCR/MainWindow.xaml
@@ -24,6 +24,11 @@
                     <MenuItem Header="File">
                         <MenuItem>Aname</MenuItem>
                     </MenuItem>
+                    <MenuItem Header="View">
+                        <MenuItem Header="Color Palette" Click="ColorPalette_ButtonClick">
+                            
+                        </MenuItem>
+                    </MenuItem>
                 </Menu>
             </StackPanel>
         
